Finished add, update data, adjust quantity, and deletion of product

--- a/biome.json
+++ b/biome.json
@@ -28,11 +28,18 @@
       "performance": {
         "noNamespaceImport": "off"
       },
+      "correctness": {
+        "useExhaustiveDependencies": "info"
+      },
       "nursery": {
         "useConsistentTypeDefinitions": "off"
       },
       "style": {
-        "noNonNullAssertion": "off"
+        "noNonNullAssertion": "off",
+        "noMagicNumbers": "off"
+      },
+      "suspicious": {
+        "noConsole": "info"
       }
     },
     "domains": {
