--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@elysiajs/eden": "^1.3.2",
+    "@elysiajs/eden": "^1.3.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -46,11 +46,13 @@
     "nuqs": "^2.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.1"
+    "zod": "^4.1.1",
+    "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
